--- a/App-rshasum/dist.ini
+++ b/App-rshasum/dist.ini
@@ -13,4 +13,6 @@ repository = github
 repository_type = git
 repository_url = https://github.com/shlomif/perl-App-rshasum.git
 repository_web = https://github.com/shlomif/perl-App-rshasum
+[ExecDir]
+dir = bin
 [Test::TidyAll]
