--- a/App-rshasum/dist.ini
+++ b/App-rshasum/dist.ini
@@ -3,7 +3,7 @@ author  = Shlomi Fish <shlomif@cpan.org>
 license = MIT
 copyright_holder = Shlomi Fish
 copyright_year   = 2019
-version = 0.0.1
+version = 0.0.2
 
 [@Filter]
 -bundle = @SHLOMIF
@@ -11,8 +11,8 @@ version = 0.0.1
 dist = App-rshasum
 repository = github
 repository_type = git
-repository_url = https://github.com/shlomif/perl-App-rshasum.git
-repository_web = https://github.com/shlomif/perl-App-rshasum
+repository_url = https://github.com/shlomif/rshasum.git
+repository_web = https://github.com/shlomif/rshasum
 [ExecDir]
 dir = bin
 [Test::TidyAll]
