--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ cache:
         - $HOME/tidyall_d
 
 sudo: false
+addons:
+    apt:
+        packages:
+            - libhunspell-dev
 language: perl
 perl:
     - 'blead'
@@ -27,5 +31,8 @@ before_install:
 install:
     - cpanm --quiet --skip-satisfied Dist::Zilla Pod::Weaver::Section::Support Perl::Critic Perl::Tidy Test::Code::TidyAll
     - cpanm --quiet --skip-satisfied Digest File::Find::Object IO::All Test::Differences
+    - "(cd App-rshasum && dzil authordeps          --missing | grep -vP '[^\\w:]' | xargs -n 5 -P 10 cpanm --quiet)"
+    - "(cd App-rshasum && dzil listdeps   --author --missing | grep -vP '[^\\w:]' | cpanm --verbose)"
 script:
     - prove tests/*.t
+    - "(cd App-rshasum && dzil smoke --release --author)"
