--- a/App-rshasum/dist.ini
+++ b/App-rshasum/dist.ini
@@ -16,3 +16,4 @@ repository_web = https://github.com/shlomif/rshasum
 [ExecDir]
 dir = bin
 [Test::TidyAll]
+; authordep Pod::Weaver::PluginBundle::SHLOMIF
