--- a/App-rshasum/dist.ini
+++ b/App-rshasum/dist.ini
@@ -15,5 +15,6 @@ repository_url = https://github.com/shlomif/rshasum.git
 repository_web = https://github.com/shlomif/rshasum
 [ExecDir]
 dir = bin
+[ReadmeMarkdownFromPod]
 [Test::TidyAll]
 ; authordep Pod::Weaver::PluginBundle::SHLOMIF
